tests/miniJava/neg/006713_mutation.MiniJava
class java { public static void true Main ( String [ ] java ) { { } } }
